--- a/public/html/login.html
+++ b/public/html/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <title>Connection</title>
-    <script src="../js/login.js"></script>
+    <script src="./../js/login.js"></script>
     <script src="https://unpkg.com/vue@3.0.5"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
