--- a/public/html/login.html
+++ b/public/html/login.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <title>Connection</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./../js/login.js"></script>
-    <script src="https://unpkg.com/vue@3.0.5"></script>
+
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,41 +25,51 @@
   </head>
 
   <body class="text-center">
-    <main class="form-signin" id="loginApp">
-      <form>
-        <h1 class="h3 mb-3 fw-normal"> {{ titleConnection }} </h1>
-        <label for="inputEmail" class="visually-hidden"> {{ email }}</label>
-        <input
-          type="email"
-          v-model="inputEmail"
-          id="inputEmail"
-          class="form-control"
-          placeholder="Adresse Email"
-          required
-          autofocus
-        />
-        <label for="inputPassword" class="visually-hidden"> {{ password }}</label>
-        <input
-          type="password"
-          v-model="inputPassword"
-          id="inputPassword"
-          class="form-control"
-          placeholder="Mot de passe"
-          required
-        />
-        <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me" /> {{ rememberMe }}
+    <div class="container">
+      <main class="form-signin" id="app">
+      <link type="text/css" href="css/signin.css" rel="stylesheet"/>
+        <form>
+          <h1 class="h3 mb-3 fw-normal">{{ titleConnection }}</h1>
+          <label for="inputEmail" class="visually-hidden">
+
+            {{ email }}
           </label>
-        </div>
-        <button
-          class="w-100 btn btn-lg btn-primary"
-          type="submit"
-          v-on:click="login()"
-        >
-          {{ login }}
-        </button>
-      </form>
-    </main>
+          <input
+            type="email"
+            v-model="inputEmail"
+            id="inputEmail"
+            class="form-control"
+            placeholder="Adresse Email"
+            required
+            autofocus
+          />
+          <label for="inputPassword" class="visually-hidden">
+  
+            {{ password }}
+          </label>
+          <input
+            type="password"
+            v-model="inputPassword"
+            id="inputPassword"
+            class="form-control"
+            placeholder="Mot de passe"
+            required
+          />
+          <div class="checkbox mb-3">
+            <label>
+              <input type="checkbox" value="remember-me" /> {{ rememberMe }}
+            </label>
+          </div>
+          <button
+            class="w-100 btn btn-lg btn-primary"
+            v-on:click="loginMethod"
+            type='button'
+          >
+            {{ login }}
+          </button>
+        </form>
+        <div>{{ response }}</div>
+      </main>
+      </div>
   </body>
 </html>
