--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <title>Accueil</title>
-    <script src="./../js/index.js"></script>
-    <script src="./../js/helper/security.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   	<script src="https://unpkg.com/vue-router"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vuex@2.0.0"></script>
+    <script src="./../js/login.js"></script>
+    <script src="./../js/register.js"></script>
+    <script src="./../js/profil.js"></script>
+    <script src="./../js/index.js"></script>
+
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
