--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script src="./../js/register.js"></script>
     <script src="./../js/profil.js"></script>
     <script src="./../js/team.js"></script>
+    <script src="./../js/builder.js"></script>
     <script src="./../js/index.js"></script>
 
     <script
