add 404 vue, remove team, redirection if not auth and replace http by api/

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,13 @@
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://unpkg.com/vue-router"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://unpkg.com/vuex@2.0.0"></script>
+    <script src="https://unpkg.com/vuex@3.0.0"></script>
     <script src="./../js/login.js"></script>
     <script src="./../js/register.js"></script>
     <script src="./../js/profil.js"></script>
     <script src="./../js/team.js"></script>
     <script src="./../js/builder.js"></script>
+    <script src="./../js/pageNotFound.js"></script>
     <script src="./../js/index.js"></script>
 
     <script
@@ -45,7 +46,7 @@
     <div id="app">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">PokemonCherchor</a>
+         <img class="nabar-brand-img" src="./assets/logo/PokemonBuilder.png"></img>
           <button
             class="navbar-toggler"
             type="button"
