--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
             <form class="d-flex">
               <button class="btn btn-custom btn-nav" v-if="!loggedIn" type="button">
                 <router-link class="nav-link text-white" to="/login">
-                  Connection
+                  Se connecter
                 </router-link>
               </button>
               <button class="btn btn-custom btn-nav " v-if="!loggedIn" type="button">
