--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="https://unpkg.com/vue-router"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vuex@3.0.0"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./../js/login.js"></script>
     <script src="./../js/register.js"></script>
     <script src="./../js/profil.js"></script>
@@ -39,6 +40,7 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
+    
     <script src="https://kit.fontawesome.com/619ecc2328.js" crossorigin="anonymous"></script>
     <link href="./css/style.css" rel="stylesheet" />
     <link href="./css/btn.css" rel="stylesheet" />
