--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
     <link href="./css/style.css" rel="stylesheet" />
     <link href="./css/btn.css" rel="stylesheet" />
     <link href="./css/pokemon-type.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="./assets/logo/PokemonBuilder.png" />
   </head>
 
   <body class="text-center">
